new html layout button input did not change

--- a/public/index.html
+++ b/public/index.html
@@ -1,121 +1,171 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-
-  <!-- Basic Page Needs
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <meta charset="utf-8">
-  <title>Your page title here :)</title>
-  <meta name="description" content="">
-  <meta name="author" content="">
-
-  <!-- Mobile Specific Metas
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <!-- FONT
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
-
-  <!-- CSS
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/skeleton.css">
-
-  <!-- Favicon
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <!-- <link rel="icon" type="image/png" href="images/favicon.png"> -->
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <link rel="stylesheet" href="./css/skeleton.css">
+    <link rel="stylesheet" href="./css/normalize.css">
 </head>
+
 <body>
+    <div class="container">
+        <h1>DO_OR_DIET</h1>
+        <hr>
 
-  <!-- Primary Page Layout
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <div class="container">
-    <div class="row">
-      <div class="one-half column" style="margin-top: 25%">
-        <h4>do or diet</h4>
-        <p>You seem to need a recipe. Lets ask you some questions</a>.</p>
-      </div>
+        <div class="row">
+            <div class="eleven columns" style="background:#eeeeee   ">
+                1. Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati doloribus enim eveniet, libero id voluptates iste beatae corrupti odit aperiam quo! Quisquam corporis officiis dolore laboriosam consequuntur sed illum veniam.
+            </div>
+            <div class="one column" style="background:white">
+                <select class="u-half-width" id="exampleRecipientInput">
+                    <option value="Option 1">1</option>
+                    <option value="Option 2">2</option>
+                    <option value="Option 3">3</option>
+                    <option value="Option 4">4</option>
+                    <option value="Option 5">5</option>
+                  </select>
+            </div>
+        </div>
+        <hr>
+        <div class="row">
+            <div class="eleven columns" style="background:#eeeeee">
+                2. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum ab delectus, deleniti harum molestias provident excepturi distinctio assumenda fugit quaerat rem dolorem ipsam praesentium repudiandae, illo nisi impedit tenetur facere.
+            </div>
+            <div class="one column" style="background:white">
+                           <select class="u-half-width" id="exampleRecipientInput">
+                    <option value="Option 1">1</option>
+                    <option value="Option 2">2</option>
+                    <option value="Option 3">3</option>
+                    <option value="Option 4">4</option>
+                    <option value="Option 5">5</option>
+                  </select>
+            </div>
+        </div>
+        <hr>
+        <div class="row">
+            <div class="eleven columns" style="background:#eeeeee">
+                3. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero quam at perferendis maxime ducimus incidunt veritatis exercitationem. Dolores ipsum quo dignissimos adipisci rerum, ex, similique cumque incidunt, nostrum officiis blanditiis.
+            </div>
+            <div class="one column" style="background: white">
+                           <select class="u-half-width" id="exampleRecipientInput">
+                    <option value="Option 1">1</option>
+                    <option value="Option 2">2</option>
+                    <option value="Option 3">3</option>
+                    <option value="Option 4">4</option>
+                    <option value="Option 5">5</option>
+                  </select>
+            </div>
+        </div>
+        <hr>
+        <div class="row">
+            <div class="eleven columns" style="background:#eeeeee">
+                4. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque corporis amet hic libero saepe, iste alias ex similique quae deleniti in quibusdam repellat quam vero aut labore rem quidem pariatur.
+            </div>
+            <div class="one column" style="background:white">
+                           <select class="u-half-width" id="exampleRecipientInput">
+                    <option value="Option 1">1</option>
+                    <option value="Option 2">2</option>
+                    <option value="Option 3">3</option>
+                    <option value="Option 4">4</option>
+                    <option value="Option 5">5</option>
+                  </select>
+            </div>
+        </div>
+        <hr>     
+        <div class="row">
+            <div class="eleven columns" style="background:#eeeeee">
+                5. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat, esse. Dolores, excepturi unde, delectus minima fugiat maiores consectetur doloremque illo necessitatibus deleniti eos, voluptas veniam cupiditate neque quam eaque. Voluptatum.
+            </div>
+            <div class="one column" style="background:white">
+                           <select class="u-half-width" id="exampleRecipientInput">
+                    <option value="Option 1">1</option>
+                    <option value="Option 2">2</option>
+                    <option value="Option 3">3</option>
+                    <option value="Option 4">4</option>
+                    <option value="Option 5">5</option>
+                  </select>
+            </div>
+        </div>
+        <hr>
+        <div class="row">
+            <div class="eleven columns" style="background:#eeeeee">
+                6. Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem velit, veniam eveniet corporis adipisci delectus, quia obcaecati consequuntur facere ratione eum, aspernatur asperiores eius ipsa vel non cum quis repellendus.
+            </div>
+            <div class="one column" style="background:white">
+                           <select class="u-half-width" id="exampleRecipientInput">
+                    <option value="Option 1">1</option>
+                    <option value="Option 2">2</option>
+                    <option value="Option 3">3</option>
+                    <option value="Option 4">4</option>
+                    <option value="Option 5">5</option>
+                  </select>
+            </div>
+        </div>
+        <hr>
+        <div class="row">
+            <div class="eleven columns" style="background:#eeeeee">
+                7. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, dicta praesentium et tempore dolore non possimus, laboriosam sunt autem dolorem temporibus officiis facilis veniam. Quis tenetur cumque unde ratione. Delectus!
+            </div>
+            <div class="one column" style="background:white">
+                           <select class="u-half-width" id="exampleRecipientInput">
+                    <option value="Option 1">1</option>
+                    <option value="Option 2">2</option>
+                    <option value="Option 3">3</option>
+                    <option value="Option 4">4</option>
+                    <option value="Option 5">5</option>
+                  </select>
+            </div>
+        </div>
+        <hr>
+        <div class="row">
+            <div class="eleven columns" style="background:#eeeeee">
+                8. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum ipsam nesciunt temporibus, deserunt adipisci, perspiciatis sed doloremque, fuga facere quia laboriosam. Ea perspiciatis eaque harum culpa tempore, excepturi unde eos?
+            </div>
+            <div class="one column" style="background:white">
+                           <select class="u-half-width" id="exampleRecipientInput">
+                    <option value="Option 1">1</option>
+                    <option value="Option 2">2</option>
+                    <option value="Option 3">3</option>
+                    <option value="Option 4">4</option>
+                    <option value="Option 5">5</option>
+                  </select>
+            </div>
+        </div>
+        <hr>
+        <div class="row">
+            <div class="eleven columns" style="background:#eeeeee">
+                9. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus, eaque sequi ad omnis ea facilis dicta blanditiis optio inventore consequuntur, illo maiores fugit laboriosam numquam temporibus, quae provident dolorum ipsa.
+            </div>
+            <div class="one column" style="background:white">
+                           <select class="u-half-width" id="exampleRecipientInput">
+                    <option value="Option 1">1</option>
+                    <option value="Option 2">2</option>
+                    <option value="Option 3">3</option>
+                    <option value="Option 4">4</option>
+                    <option value="Option 5">5</option>
+                  </select>
+            </div>
+        </div>
+        <hr>
+        <div class="row">
+            <div class="eleven columns" style="background:#eeeeee">
+                10. Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quae ullam beatae aliquam rem commodi repudiandae, explicabo blanditiis neque distinctio culpa cupiditate molestias! Quas officia asperiores neque atque magni! Officiis.
+            </div>
+            <div class="one column" style="background:white">
+                           <select class="u-half-width" id="exampleRecipientInput">
+                    <option value="Option 1">1</option>
+                    <option value="Option 2">2</option>
+                    <option value="Option 3">3</option>
+                    <option value="Option 4">4</option>
+                    <option value="Option 5">5</option>
+                  </select>
+            </div>
+        </div>
+        <input class="button-primary" type="submit" value="Submit" style="background:red">
     </div>
-  </div>
-<hr>
-<!-- .container is main centered wrapper -->
-<div class="docs-section" id="grid">
-    <h6 class="docs-header">The grid</h6>
-    <p>The grid is a <u>12-column fluid grid with a max width of 960px</u>, that shrinks with the browser/device at smaller sizes. The max width can be changed with one line of CSS and all columns will resize accordingly. The syntax is simple and it makes coding responsive much easier. Go ahead, resize the browser. </p>
-    <div class="example-grid docs-example">
-      <div class="row">
-        <div class="eleven columns">q1</div>
-        <div class="one column">One</div>
-      </div>
-    </div>
-    <div class="row">
-        <div class="eleven columns">q2</div>
-        <div class="one column">One</div>
-      </div>
-      <div class="row">
-        <div class="eleven columns">q3</div>
-        <div class="one column">One</div>
-      </div>
-    </div>
-    <div class="row">
-        <div class="eleven columns">q4</div>
-        <div class="one column">One</div>
-      </div>
-      <div class="row">
-        <div class="eleven columns">q5</div>
-        <div class="one column">One</div>
-      </div>
-    </div>
-    <div class="row">
-        <div class="eleven columns">q6</div>
-        <div class="one column">One</div>
-      </div>
-      <div class="row">
-        <div class="eleven columns">q7</div>
-        <div class="one column">One</div>
-      </div>
-    </div>
-    <div class="row">
-        <div class="eleven columns">q8</div>
-        <div class="one column">One</div>
-      </div>
-      <div class="row">
-        <div class="eleven columns">q9</div>
-        <div class="one column">One</div>
-      </div>
-    </div>
-    <div class="row">
-        <div class="eleven columns">q10</div>
-        <div class="one column">One</div>
-      </div>
-      </div>
-  <form>
-    <div class="row">
-      <div class="six columns">
-        <label for="exampleEmailInput">Your email</label>
-        <input class="u-full-width" type="email" placeholder="test@mailbox.com" id="exampleEmailInput">
-      </div>
-      <div class="six columns">
-        <label for="exampleRecipientInput">Reason for contacting</label>
-        <select class="u-full-width" id="exampleRecipientInput">
-          <option value="Option 1">Questions</option>
-          <option value="Option 2">Admiration</option>
-          <option value="Option 3">Can I get your number?</option>
-        </select>
-      </div>
-    </div>
-    <label for="exampleMessage">Message</label>
-    <textarea class="u-full-width" placeholder="Hi Dave …" id="exampleMessage"></textarea>
-    <label class="example-send-yourself-copy">
-      <input type="checkbox">
-      <span class="label-body">Send a copy to yourself</span>
-    </label>
-    <input class="button-primary" type="submit" value="Submit">
-  </form>
-
-<!-- End Document
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
+
 </html>
