restructre for passport

--- a/public/home.html
+++ b/public/home.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1><a href = "./home.html">We will go to home page</a></h1>
+    <h1>THis is the home page</h1>
 </body>
 </html>
