--- a/public/signup.html
+++ b/public/signup.html
@@ -19,7 +19,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
-        <h2>Sign Up Form</h2>
+        <h2>Do_or_Diet Sign in</h2>
         <form class="signup">
           <div class="form-group">
             <label for="exampleInputEmail1">Email address</label>
@@ -30,9 +30,18 @@
             <input type="password" class="form-control" id="password-input" placeholder="Password">
           </div>
           <div class="form-group">
-            <label for="exampleInputPassword1">Password</label>
-            <input type="password" class="form-control" id="password-input" placeholder="Password">
+            <label for="exampleInputAge1">Age</label>
+            <input type="age" class="form-control" id="age-input" placeholder="age">
           </div>
+          <div class="form-group">
+            <label for="exampleInputWeight1">Weight</label>
+            <input type="weight" class="form-control" id="weight-input" placeholder="weight">
+          </div>
+          <div class="form-group">
+            <label for="exampleInputCalories1">Calories</label>
+            <input type="calorie" class="form-control" id="calorie-input" placeholder="calories">
+          </div>
+        
           <div style="display: none" id="alert" class="alert alert-danger" role="alert">
             <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
             <span class="sr-only">Error:</span> <span class="msg"></span>
