fixed all href links

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,21 @@
     <link rel="stylesheet" href="./css/skeleton.css">
 </head>
 <body>
-    <h1><a href = "./home.html">We will go to home page</a></h1>
+   <div class="container">
+        <h1>
+           <strong>Do or Diet</strong>
+        </h1>
+
+        <div class="row">
+            <!-- <input class="button-primary" type="submit" value="Login" style="background:blue">
+            <input class="button-primary" type="submit" value="Signup" style="background:green"> -->
+            <a class="button"href="./login.html" style="background: yellow">Login</a>
+            <a class="button"href="./signup.html" style="background: green">Sign up</a>
+
+        </div>
+   </div>
+   
+    <!-- <h1><a href = "./home.html">We will go to home page</a></h1>
+    EDIT THIS PAGE WITH REGISTRY -->
 </body>
 </html>
