--- a/public/signup.html
+++ b/public/signup.html
@@ -39,10 +39,12 @@
             <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
             <span class="sr-only">Error:</span> <span class="msg"></span>
           </div>
-          <button type="submit" class="btn btn-default">Sign Up</button>
+          <!-- <button type="submit" class="btn btn-default">Sign Up</button> -->
+          <a class="button"href="./home.html" style="background: yellow">Login</a>
+
         </form>
         <br />
-        <p>Or log in <a href="/login">here</a></p>
+        <p>Or log in <a href="./login.html">here</a></p>
       </div>
     </div>
   </div>
