--- a/public/home.html
+++ b/public/home.html
@@ -10,6 +10,78 @@
 
 </head>
 <body>
-    <h1>THis is the home page</h1>
+    <h1>Survey</h1>
+    <!-- EDIT THIS PAGE WITH SURVEY -->
+    <div class="container">
+        <hr>
+
+        <div class="row">
+            <div class="eleven columns" style="background:#eeeeee   ">
+                1. Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati doloribus enim eveniet, libero id voluptates iste beatae corrupti odit aperiam quo! Quisquam corporis officiis dolore laboriosam consequuntur sed illum veniam.
+            </div>
+            <div class="one column" style="background:white">
+                <select class="u-half-width" id="exampleRecipientInput">
+                    <option value="Option 1">Yes</option>
+                    <option value="Option 2">No</option>
+                  </select>
+            </div>
+        </div>
+        <hr>
+
+        <div class="row">
+            <div class="eleven columns" style="background:#eeeeee   ">
+                2. Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati doloribus enim eveniet, libero id voluptates iste beatae corrupti odit aperiam quo! Quisquam corporis officiis dolore laboriosam consequuntur sed illum veniam.
+            </div>
+            <div class="one column" style="background:white">
+                <select class="u-half-width" id="exampleRecipientInput">
+                    <option value="Option 1">Yes</option>
+                    <option value="Option 2">No</option>
+                  </select>
+            </div>
+        </div>
+        <hr>
+
+        <div class="row">
+            <div class="eleven columns" style="background:#eeeeee   ">
+                3. Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati doloribus enim eveniet, libero id voluptates iste beatae corrupti odit aperiam quo! Quisquam corporis officiis dolore laboriosam consequuntur sed illum veniam.
+            </div>
+            <div class="one column" style="background:white">
+                <select class="u-half-width" id="exampleRecipientInput">
+                    <option value="Option 1">Yes</option>
+                    <option value="Option 2">No</option>
+                  </select>
+            </div>
+        </div>
+        <hr>
+
+        <div class="row">
+            <div class="eleven columns" style="background:#eeeeee   ">
+                4. Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati doloribus enim eveniet, libero id voluptates iste beatae corrupti odit aperiam quo! Quisquam corporis officiis dolore laboriosam consequuntur sed illum veniam.
+            </div>
+            <div class="one column" style="background:white">
+                <select class="u-half-width" id="exampleRecipientInput">
+                    <option value="Option 1">Yes</option>
+                    <option value="Option 2">No</option>
+                  </select>
+            </div>
+        </div>
+        <hr>
+
+        <div class="row">
+            <div class="eleven columns" style="background:#eeeeee   ">
+                5. Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati doloribus enim eveniet, libero id voluptates iste beatae corrupti odit aperiam quo! Quisquam corporis officiis dolore laboriosam consequuntur sed illum veniam.
+            </div>
+            <div class="one column" style="background:white">
+                <select class="u-half-width" id="exampleRecipientInput">
+                    <option value="Option 1">1</option>
+                    <option value="Option 2">2</option>
+                    <option value="Option 3">3</option>
+                    <option value="Option 4">4</option>
+                    <option value="Option 5">5</option>
+                  </select>
+            </div>
+        </div>
+        <a class="button"href="./members.html" style="background: yellow">Submit</a>
+    </div>
 </body>
 </html>
