--- a/public/login.html
+++ b/public/login.html
@@ -31,17 +31,17 @@
             <label for="exampleInputPassword1">Password</label>
             <input type="password" class="form-control" id="password-input" placeholder="Password">
           </div>
-          <button type="submit" class="btn btn-default">Login</button>
+            <!-- <button type="submit" href ="./members.html" class="btn btn-default">Login
+            </button> -->
+            <a class="button"href="./members.html" style="background: cornsilk">Login</a>
+
         </form>
-        <br />
-        <p>Or sign up <a href="/">here</a></p>
+        <br>
+        <p>Or sign up <a href="./signup.html">here</a></p>
       </div>
     </div>
   </div>
-
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/login.js"></script>
-
 </body>
-
 </html>
