--- a/public/members.html
+++ b/public/members.html
@@ -15,7 +15,7 @@
   <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="/logout">
+      <a class="navbar-brand" href="./index.html">
         Logout
       </a>
     </div>
@@ -33,5 +33,4 @@
   <script type="text/javascript" src="js/members.js"></script>
 
 </body>
-
 </html>
