--- a/public/signup.html
+++ b/public/signup.html
@@ -30,8 +30,16 @@
             <input type="password" class="form-control" id="password-input" placeholder="Password">
           </div>
           <div class="form-group">
-            <label for="exampleInputPassword1">Password</label>
-            <input type="password" class="form-control" id="password-input" placeholder="Password">
+            <label for="exampleInputage1">Age</label>
+            <input type="age" class="form-control" id="age-input" placeholder="age">
+          </div>
+          <div class="form-group">
+            <label for="exampleInputweight1">Weight</label>
+            <input type="weight" class="form-control" id="weight-input" placeholder="weight">
+          </div>
+          <div class="form-group">
+            <label for="exampleInputcalorie1">Calories</label>
+            <input type="calories" class="form-control" id="calorie-input" placeholder="calories">
           </div>
           <div style="display: none" id="alert" class="alert alert-danger" role="alert">
             <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
