--- a/public/home.html
+++ b/public/home.html
@@ -17,7 +17,8 @@
 
         <div class="row">
             <div class="eleven columns" style="background:#eeeeee   ">
-                1. Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati doloribus enim eveniet, libero id voluptates iste beatae corrupti odit aperiam quo! Quisquam corporis officiis dolore laboriosam consequuntur sed illum veniam.
+                1. Are you planted based?
+                <!-- vegan if yes -->
             </div>
             <div class="one column" style="background:white">
                 <select class="u-half-width" id="exampleRecipientInput">
@@ -30,7 +31,8 @@
 
         <div class="row">
             <div class="eleven columns" style="background:#eeeeee   ">
-                2. Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati doloribus enim eveniet, libero id voluptates iste beatae corrupti odit aperiam quo! Quisquam corporis officiis dolore laboriosam consequuntur sed illum veniam.
+                2. Do you agree with a high fat/low carb diet ?
+                    <!-- keto if yes -->
             </div>
             <div class="one column" style="background:white">
                 <select class="u-half-width" id="exampleRecipientInput">
@@ -43,7 +45,8 @@
 
         <div class="row">
             <div class="eleven columns" style="background:#eeeeee   ">
-                3. Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati doloribus enim eveniet, libero id voluptates iste beatae corrupti odit aperiam quo! Quisquam corporis officiis dolore laboriosam consequuntur sed illum veniam.
+                3. Is eating natural important to you?
+                <!-- paleo if yes -->
             </div>
             <div class="one column" style="background:white">
                 <select class="u-half-width" id="exampleRecipientInput">
@@ -56,7 +59,7 @@
 
         <div class="row">
             <div class="eleven columns" style="background:#eeeeee   ">
-                4. Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati doloribus enim eveniet, libero id voluptates iste beatae corrupti odit aperiam quo! Quisquam corporis officiis dolore laboriosam consequuntur sed illum veniam.
+                4. 
             </div>
             <div class="one column" style="background:white">
                 <select class="u-half-width" id="exampleRecipientInput">
@@ -82,6 +85,8 @@
             </div>
         </div>
         <a class="button"href="./members.html" style="background: yellow">Submit</a>
+        <!-- _________________ API__________________ -->
+        <!-- <script src="js/      .js" type="text/javascript"></script> -->
     </div>
 </body>
 </html>
