jquery calling API

--- a/public/home.html
+++ b/public/home.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/skeleton.css">
+   
 
 </head>
 <body>
@@ -85,8 +86,10 @@
             </div>
         </div>
         <a class="button"href="./members.html" style="background: yellow">Submit</a>
-        <!-- _________________ API__________________ -->
-        <!-- <script src="js/      .js" type="text/javascript"></script> -->
     </div>
+    <!-- _________________ API__________________ -->
+    <!-- <script src="js/      .js" type="text/javascript"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="js/survey.js"></script>
 </body>
 </html>
