corrected login features done as a group

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
             <!-- <input class="button-primary" type="submit" value="Login" style="background:blue">
             <input class="button-primary" type="submit" value="Signup" style="background:green"> -->
             <a class="button"href="./login.html" style="background: yellow">Login</a>
-            <a class="button"href="./signup.html" style="background: green">Sign up</a>
+            <a class="button"href="/signup" style="background: green">Sign up</a>
 
         </div>
    </div>
