--- a/public/login.html
+++ b/public/login.html
@@ -7,8 +7,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
   <link href="stylesheets/style.css" rel="stylesheet">
-  <link rel="stylesheet" href="./css/normalize.css">
-  <link rel="stylesheet" href="./css/skeleton.css">
 </head>
 
 <body>
@@ -31,17 +29,17 @@
             <label for="exampleInputPassword1">Password</label>
             <input type="password" class="form-control" id="password-input" placeholder="Password">
           </div>
-            <!-- <button type="submit" href ="./members.html" class="btn btn-default">Login
-            </button> -->
-            <a class="button"href="./members.html" style="background: cornsilk">Login</a>
-
+          <button type="submit" class="btn btn-default">Login</button>
         </form>
-        <br>
-        <p>Or sign up <a href="./signup.html">here</a></p>
+        <br />
+        <p>Or sign up <a href="/">here</a></p>
       </div>
     </div>
   </div>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/login.js"></script>
+
 </body>
+
 </html>
