--- a/public/members.html
+++ b/public/members.html
@@ -36,7 +36,28 @@
       </div>
     </div>
   </div>
-
+<!-- _________________CARD________________ -->
+<div class="row">
+  <div class="col-sm-6">
+    <div class="card1">
+      <div class="card-body">
+        <h5 class="card-title1">Recipe</h5>
+        <p class="card-text1"></p>
+        <a target="_blank" href="#" class="btn btn-primary btn1">read more</a>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-6">
+    <div class="card2">
+      <div class="card-body">
+        <h5 class="card-title2">Recipe</h5>
+        <p class="card-text2"></p>
+        <a target="_blank" class="btn btn-primary btn2">Read more</a>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- CARD END_____________________________ -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/members.js"></script>
 
