--- a/public/members.html
+++ b/public/members.html
@@ -7,6 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
   <link href="stylesheets/style.css" rel="stylesheet">
+  <link rel="stylesheet" href="style/normalize.css">
+  <link rel="stylesheet" href="style/skeleton.css">
+
 </head>
 
 <body>
@@ -37,27 +40,29 @@
     </div>
   </div>
 <!-- _________________CARD________________ -->
-<div class="row">
-  <div class="col-sm-6">
-    <div class="card1">
-      <div class="card-body">
-        <h5 class="card-title1">Recipe</h5>
-        <p class="card-text1"></p>
-        <a target="_blank" href="#" class="btn btn-primary btn1">read more</a>
+<div class="container"> 
+  <div class="row">
+    <div class="col-sm-6">
+      <div class="card1">
+        <div class="card-body">
+          <h5 class="card-title1">Recipe</h5>
+          <p class="card-text1"></p>
+          <a target="_blank" href="#" class="btn btn-primary btn1">read more</a>
+        </div>
       </div>
     </div>
-  </div>
-  <div class="col-sm-6">
-    <div class="card2">
-      <div class="card-body">
-        <h5 class="card-title2">Recipe</h5>
-        <p class="card-text2">  </p>
-        <a target="_blank" class="btn btn-primary btn2">Read more</a>
+    <div class="col-sm-6">
+      <div class="card2">
+        <div class="card-body">
+          <h5 class="card-title2">Recipe</h5>
+          <p class="card-text2">  </p>
+          <a target="_blank" class="btn btn-primary btn2">Read more</a>
+        </div>
       </div>
     </div>
   </div>
 </div>
-<!-- CARD END_____________________________ -->
+  <!-- CARD END_____________________________ -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/members.js"></script>
 
