--- a/public/members.html
+++ b/public/members.html
@@ -15,6 +15,7 @@
 <body>
   <nav class="navbar navbar-default">
     <div class="container-fluid">
+        <p style="text-align: center;font-size: 50px;"><strong>DO OR DIET</strong></p>
       <div class="navbar-header">
         <a class="navbar-brand" href="/logout">
           Logout
@@ -26,11 +27,16 @@
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <h2>Welcome <span class="member-name"></span></h2>
-        <div id="diet"></div>
+        <hr>
+        <br>
+        <strong><div id="diet"></div></strong>
+        <hr>
+          
         <form>
           <label for="proteinINPUT">
             Choose your protein. 
           </label>
+          <hr>
           <input type ="text" id ="proteinINPUT">
           <button id="proteinSUBMIT">
             submit
@@ -62,10 +68,11 @@
     </div>
   </div>
 </div>
+<hr>
+
   <!-- CARD END_____________________________ -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/members.js"></script>
 
 </body>
-
 </html>
