--- a/public/signup.html
+++ b/public/signup.html
@@ -7,14 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
   <link href="stylesheets/style.css" rel="stylesheet">
-  <link rel="stylesheet" href="style/normalize.css">
-  <link rel="stylesheet" href="style/skeleton.css">
-
+  <link rel="stylesheet" href="stylesheets/normalize.css">
+  <link rel="stylesheet" href="stylesheets/skeleton.css">
 </head>
-
 <body>
   <nav class="navbar navbar-default">
     <div class="container-fluid">
+      <p style="text-align: center;font-size: 50px;"><strong>DO OR DIET</strong></p>
       <div class="navbar-header">
       </div>
     </div>
@@ -47,6 +46,7 @@
       </div>
     </div>
   </div>
+  
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/signup.js"></script>
 
